--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html>
 	<head>
 		<title>Transcendence</title>
-		<script src="./index.js"></script>
+		<!-- <script src="./index.js"></script> -->
+		 <link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<canvas id="canvas"></canvas>
+		<div class="wrapper">
+			<div class="content">
+				<h1>:3</h1>
+				<p>meow</p>
+			</div>
+		</div>
+		<!-- <canvas id="canvas"></canvas> -->
 	</body>
 </html>
