Add back and forward button functionality

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 	<body>
 		<div class="main">
 			<nav>
-				<button data-page="home">Home</button>
-				<button data-page="profile">Profile</button>
+				<button page="home">Home</button>
+				<button page="profile">Profile</button>
 			</nav>
 			
 			<div class="wrapper">
 				<div class="content">
-					<div id="app"></div>
+					<div id="spa"></div>
 				</div>
 			</div>
 
@@ -29,6 +29,4 @@
 <!-- To do:
  do we do a dropdown menu or just buttons in a row?
  add buttons
- add welcome text?
- make buttons work and load right data as SPA
 -->
