Add comment to know how to run

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 	</body>
 </html>
 
+
+<!-- to run script and build js from ts: npm run build -->
 <!-- To do:
  add buttons
  if not logged in, show sign in button. if logged in, show all other buttons (game, profile, log out).
