--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
 <!-- to run script and build js from ts: npm run build -->
 <!-- To do:
+ make tailwind css work in docker
  add buttons
  if not logged in, show sign in button. if logged in, show all other buttons (game, profile, log out).
  if buttons clicked like, redirect to log in page if not logged in.
