--- a/index.html
+++ b/index.html
@@ -31,5 +31,5 @@
  make tailwind css work in docker
  add buttons
  if not logged in, show sign in button. if logged in, show all other buttons (game, profile, log out).
- if buttons clicked like, redirect to log in page if not logged in.
+ redirect to log in page if not logged in.
 -->
