--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+
 <head>
 	<title>Document</title>
 </head>
+
 <body>
 	Yoo
+	<p><a href="/login">Login</a></p>
 	<p><a href="/register">Register</a></p>
 </body>
-</html>
