fix: update home link to use relative path in registration and success pages

--- a/frontend/public/register.html
+++ b/frontend/public/register.html
@@ -15,5 +15,5 @@
 		</label>
 		<input type="submit" value="Submit">
 	</form>
-	<p> <a href="http://localhost:8080/">Home</a></p>
+	<p> <a href="/index.html">Home</a></p>
 </body>
