feat: add update avatar option in logged in page and add script that links this to the backend database

--- a/frontend/public/loginSuccess.html
+++ b/frontend/public/loginSuccess.html
@@ -6,5 +6,14 @@
 
 <body>
 	<h1>Login succes, congrats :p</h1>
+	
+	<form id="avatarForm" enctype="multipart/form-data">
+		<label>	
+			<input id="avatarInput" type="file" accept="image/jpeg, image/png, image/jpg" required>
+			<button type="submit">Update Avatar</button>
+		</label>
+	</form>
+	<script src="updateAvatar.ts"></script>
+
 	<p> <a href="/index.html">Home</a></p>
 </body>
