fix: change directory structure for clarity between public pages and scripts

--- a/frontend/public/pages/loginSuccess.html
+++ b/frontend/public/pages/loginSuccess.html
@@ -13,7 +13,7 @@
 			<button type="submit">Update Avatar</button>
 		</label>
 	</form>
-	<script src="updateAvatar.ts"></script>
+	<script src="../scripts/updateAvatar.ts"></script>
 
 	<p> <a href="/index.html">Home</a></p>
 </body>
