--- a/frontend/public/pages/loginSuccess.html
+++ b/frontend/public/pages/loginSuccess.html
@@ -7,13 +7,13 @@
 <body>
 	<h1>Login succes, congrats :p</h1>
 	
-	<form id="avatarForm" enctype="multipart/form-data">
+	<!-- <form id="avatarForm" enctype="multipart/form-data">
 		<label>	
 			<input id="avatarInput" type="file" accept="image/jpeg, image/png, image/jpg" required>
 			<button type="submit">Update Avatar</button>
 		</label>
 	</form>
-	<script src="../scripts/updateAvatar.ts"></script>
+	<script src="../scripts/updateAvatar.ts"></script> -->
 
 	<p> <a href="/index.html">Home</a></p>
 </body>
