feat: add JWT and cookie usage to server and authentication function to handler

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,6 @@
 
 <body>
 	Yoo
-	<p><a href="/login">Login</a></p>
-	<p><a href="/register">Register</a></p>
+	<p><a href="/login">Login</a></p><p><a href="/register">Register</a></p>
+	<p><a href="/profile">Profile</a></p>
 </body>
