fix: - refactor profile page so there's no option to go to login and registration page without logging out first - refactor registersuccess so you can directly go to the login page

--- a/frontend/public/registerSuccess.html
+++ b/frontend/public/registerSuccess.html
@@ -6,6 +6,6 @@
 
 <body>
 	<h1>Sign up succes, congrats :p</h1>
-	<p><a href="/profile">Profile</a></p>
+	<p><a href="/login">Login</a></p>
 	<p><a href="/index.html">Home</a></p>
 </body>
