--- a/frontend/public/profile.html
+++ b/frontend/public/profile.html
@@ -5,7 +5,10 @@
 </head>
 
 <body>
-	<h1>Authentication successful!</h1>
+	<!-- <img id="avatar" src="" alt="User Avatar"> -->
+	<h1 id="username">Loading...</h1>
+
+	<script src="scripts/profile.js"></script>
 
 	<button id="logoutButton">Logout</button>
 	<script src="scripts/logout.js"></script>
