--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,5 +7,5 @@
 <body>
 	Yoo
 	<p><a href="/login">Login</a></p><p><a href="/register">Register</a></p>
-	<p><a href="/profile">Profile</a></p>
+	<p><a href="/profile.html">Profile</a></p>
 </body>
