--- a/frontend/public/profile.html
+++ b/frontend/public/profile.html
@@ -6,10 +6,11 @@
 
 <body>
 	<!-- <img id="avatar" src="" alt="User Avatar"> -->
-	<h1 id="username">Loading...</h1>
-
+	<span id="username"></span>
 	<script src="scripts/profile.js"></script>
 
 	<button id="logoutButton">Logout</button>
 	<script src="scripts/logout.js"></script>
 </body>
+
+// TODO redesign, because now there is no authorization check at /profile.html
