Prepare for docker setup

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
 <!-- to run script and build js from ts: npm run build 
-	to run tailwind cli build process: npx tailwindcss -i ./src/input.css -o ./src/output.css --watch
+	to run tailwind cli build process: npx tailwindcss -i ./css/home.css -o ./css/output.css --watch
 -->
 <!-- To do:
  add buttons
