fix: update user data fetching and display logic, improve error handling

--- a/frontend/public/profile.html
+++ b/frontend/public/profile.html
@@ -6,11 +6,9 @@
 
 <body>
 	<!-- <img id="avatar" src="" alt="User Avatar"> -->
-	<span id="username"></span>
+	<span id="username">Loading...</span>
 	<script src="scripts/profile.js"></script>
 
 	<button id="logoutButton">Logout</button>
 	<script src="scripts/logout.js"></script>
 </body>
-
-// TODO redesign, because now there is no authorization check at /profile.html
