fix: update navigation links to point to root instead of index.html

--- a/frontend/public/login.html
+++ b/frontend/public/login.html
@@ -16,5 +16,5 @@
 		<input type="submit" value="Submit">
 	</form>
 	<p><a href="/register">Register</a></p>
-	<p><a href="/index.html">Home</a></p>
+	<p><a href="/">Home</a></p>
 </body>
