--- a/frontend/public/registerSuccess.html
+++ b/frontend/public/registerSuccess.html
@@ -7,5 +7,5 @@
 <body>
 	<h1>Sign up succes, congrats :p</h1>
 	<p><a href="/login">Login</a></p>
-	<p><a href="/index.html">Home</a></p>
+	<p><a href="/">Home</a></p>
 </body>
