fix: uncomment avatar image element and logging in displayUserData function

--- a/frontend/public/profile.html
+++ b/frontend/public/profile.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-	<!-- <img id="avatar" src="" alt="User Avatar"> -->
+	<img id="avatar" src="" alt="User Avatar">
 	<span id="username">Loading...</span>
 	<script src="scripts/profile.js"></script>
 
