Fix page loading correctly and install npm in container

--- a/src/index.html
+++ b/src/index.html
@@ -27,11 +27,10 @@
 
 
 <!-- to run script and build js from ts: npm run build 
-	to run tailwind cli build process: npx tailwindcss -i ./frontend/css/home.css -o ./frontend/css/output.css --watch
+	to run tailwind cli build process: npx tailwindcss -i ./frontend/css/home.css -o ./frontend/css/output.css
 -->
 <!-- To do:
- Make docker run the cmds to install tailwindcss/typescript, and run the build/script.
- Fix css, background and stuff is broken.
+ fix page loading in script, sometimes wont load page
  add buttons
  if not logged in, show sign in button. if logged in, show all other buttons (game, profile, log out).
  redirect to log in page if not logged in.
