Remove output and update to do list

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
 	to run tailwind cli build process: npx tailwindcss -i ./frontend/css/home.css -o ./frontend/css/output.css
 -->
 <!-- To do:
+ change to tailwind
  fix page loading in script, sometimes wont load page
  add buttons
  if not logged in, show sign in button. if logged in, show all other buttons (game, profile, log out).
