fix issue with buttons wrong clickable area scaling causing shrunk buttons only be clickable

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
 			
 			<div class="wrapper">
 				<div class="nav-buttons flex flex-row">
-					<button page="home">Home</button>
-					<button page="login">Log in</button>
+					<button page="home"><span class="btn-inner">Home</span></button>
+					<button page="login"><span class="btn-inner">Log in</span></button>
 				</div>
 				<div class="content">
 					<div id="spa"></div>
