--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,11 @@
 				<div id="spa" class="flex-1 p-16 flex items-start justify-center"></div>
 			</div>
 		</div>
+		<div class="fixed bottom-0 left-0 w-full overflow-hidden pointer-events-none h-20">
+			<div class="w-[100%] animate-scrollLeft">
+				<img src="./frontend/assets/gifs/ufo.gif" alt="scrolling gif" class="h-full" />
+			</div>
+		</div>
 	</body>
 </html>
 
