--- a/src/index.html
+++ b/src/index.html
@@ -8,25 +8,8 @@
 		<script defer src="./frontend/js/selectView.js"></script>
 		<link rel="icon" type="image/png" sizes="16x16" href="./frontend/assets/favicon/favicon-16x16.png">
 	</head>
-	<body class="m-0 p-0 font-comic overflow-y-hidden box-border">
-		<div class="flex h-screen w-screen items-center justify-center bg-stars bg-10% text-pink-200">
-			<div class="flex flex-col w-1/2 h-full bg-black p-5 text-center border-8 animate-rainbow">
-				<div class="flex justify-center items-center p-16">
-					<img src="https://i.picasion.com/gl/92/kjzM.gif" width="750" height="80">
-				</div>
-				<div class="gap-4 bg-purple-700">
-					<button class="px-6 py-4 rounded-md hover:bg-purple-950" page="home">Home</button>
-					<button class="px-6 py-4 rounded-md hover:bg-purple-950" page="login">Log in</button>
-					<button class="px-6 py-4 rounded-md hover:bg-purple-950" page="scoreboard">Scoreboard</button>
-				</div>
-				<div id="spa" class="flex-1 p-16 flex items-start justify-center"></div>
-			</div>
-		</div>
-		<div class="fixed bottom-0 left-0 w-full overflow-hidden pointer-events-none h-20">
-			<div class="w-[100%] animate-scrollLeft">
-				<img src="./frontend/assets/gifs/ufo.gif" alt="scrolling gif" class="h-full" />
-			</div>
-		</div>
+	<body>
+		<div id="spa"></div>
 	</body>
 </html>
 
