--- a/match_making/src/index.html
+++ b/match_making/src/index.html
@@ -1,24 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join Game Room</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Join Game Room</title>
+  <!-- filepath: /home/tknibbe/Documents/rank6/transcendacne/match_making/src/index.html -->
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Welcome to the Game Room!</h1>
-        <p>Ready to have some fun? Join a game room and let the adventure begin!</p>
-		<form action="/joinRoom" method="post">
-        	<button id="joinGameButton" type="submit">Join Room</button>
-    	</form>
-    </div>
-	<script src="js/joinRoom.js"></script>
+  <div class="container">
+    <h1>Welcome to the Game Room!</h1>
+    <p>Ready to have some fun? Join a game room and let the adventure begin!</p>
+
+    <!-- Each form sets 'gameMode' to a different value -->
+    <form action="/joinRoom" method="post">
+      <button class="joinGameButton" name="gameMode" value="pong_2" type="submit">
+        Join Room Pong (2 players)
+      </button>
+    </form>
+
+    <form action="/joinRoom" method="post">
+      <button class="joinGameButton" name="gameMode" value="pong_3" type="submit">
+        Join Room Pong (3 players)
+      </button>
+    </form>
+
+    <form action="/joinRoom" method="post">
+      <button class="joinGameButton" name="gameMode" value="pong_4" type="submit">
+        Join Room Pong (4 players)
+      </button>
+    </form>
+
+    <form action="/joinRoom" method="post">
+      <button class="joinGameButton" name="gameMode" value="memory" type="submit">
+        Join Memory Game (2 players)
+      </button>
+    </form>
+  </div>
+
+  <!-- Example scripts -->
+  <script type="module" src="js/joinRoom.js"></script>
+  <script type="module" src="js/room.js"></script>
 </body>
-
-<!-- TODO: try to understand why this was necessary according to gpt. ES modules vs commonJS modules in the browser. together with "module": "ESNExt in the tsconfig.client.json"-->
-<script type="module" src="js/joinRoom.js"></script>
-
-<script type="module" src="js/room.js"></script>
 </html>
