added leaveRoom button

--- a/match_making/src/index.html
+++ b/match_making/src/index.html
@@ -36,6 +36,11 @@
         Join Memory Game (2 players)
       </button>
     </form>
+      <form action="/leaveRoom" method="post">
+      <button class="joinGameButton">
+        leave game
+      </button>
+    </form>
   </div>
 
   <!-- Example scripts -->
