feat: rename public folder to public instead of frontend to prevent ambiguity and change it accordingly in all files

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,9 +4,9 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Transcendence</title>
-		<link rel="stylesheet" href="./frontend/css/output.css">
-		<script defer src="./frontend/js/selectView.js"></script>
-		<link rel="icon" type="image/png" sizes="16x16" href="./frontend/assets/favicon/favicon-16x16.png">
+		<link rel="stylesheet" href="./public/css/output.css">
+		<script defer src="./public/js/selectView.js"></script>
+		<link rel="icon" type="image/png" sizes="16x16" href="./public/assets/favicon/favicon-16x16.png">
 	</head>
 	<body>
 		<div id="spa"></div>
@@ -14,7 +14,7 @@
 </html>
 
 <!-- to run script and build js from ts: npm run build 
-	to run tailwind cli build process: npx tailwindcss -i ./frontend/css/home.css -o ./frontend/css/output.css
+	to run tailwind cli build process: npx tailwindcss -i ./public/css/home.css -o ./public/css/output.css
 -->
 <!-- To do:
  make pages for when logged in or when not logged in
