--- a/match_making/src/public/index.html
+++ b/match_making/src/public/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Join Game Room</title>
-  <!-- filepath: /home/tknibbe/Documents/rank6/transcendacne/match_making/src/index.html -->
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="public/styles.css">
 </head>
 <body>
   <div class="container">
@@ -43,8 +42,5 @@
     </form>
   </div>
 
-  <!-- Example scripts -->
-  <script type="module" src="js/joinRoom.js"></script>
-  <script type="module" src="js/room.js"></script>
 </body>
 </html>
