feat: update nginx configuration for auth service and improve registration form handling, working now

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Transcendence</title>
 		<link rel="stylesheet" href="./public/css/output.css">
-		<script defer src="./public/js/selectView.js"></script>
+		<script type="module" src="./public/js/selectView.js"></script>
 		<link rel="icon" type="image/png" sizes="16x16" href="./public/assets/favicon/favicon-16x16.png">
 	</head>
 	<body>
