--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Transcendence</title>
 		<link rel="stylesheet" href="./frontend/css/output.css">
-		<script defer src="./frontend/js/selectView.js"></script>
+		<script type="module" src="./frontend/js/selectView.js"></script>
 		<link rel="icon" type="image/png" sizes="16x16" href="./frontend/assets/favicon/favicon-16x16.png">
 	</head>
 	<body>
@@ -18,5 +18,5 @@
 -->
 <!-- To do:
  make pages for when logged in or when not logged in
- if not logged in, show sign in button, and scoreboard. if logged in, show all other buttons.
+ if not logged in, show sign in button, and leaderboard. if logged in, show all other buttons.
 -->
