Add dev file for quick page access

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -13,7 +13,7 @@
 	</body>
 </html>
 
-<!-- to run script and build js from ts: npm run build 
+<!-- to run script and build js from ts in src folder: npm run build 
 	to run tailwind cli build process: npx tailwindcss -i ./public/css/home.css -o ./public/css/output.css
 -->
 <!-- To do:
