feat: Add toast notification styles and container to app.css and index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,5 +9,6 @@
     </head>
     <body>
         <div id="app-container"></div>
+        <div id="toast-container" class="toast-container"></div>
     </body>
 </html>
